--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <div class="orb orb2"></div>
 
   <div class="container">
-    <img src="/img/icons/MarqzenLogo.svg" width="100px" alt="Marqzen Logo">
+    <img src="https://raw.githubusercontent.com/ishaquecreates/Coming-soon/fcf99f85d1fe3d8679a1d9a744a56ef65b2e0cc9/MarqzenLogo.svg" width="100px" alt="Marqzen Logo">
     <h1 class="headline">Coming Soon</h1>
     <p class="subtext">We’re crafting something exciting to elevate your brand. Stay tuned.</p>
 
@@ -197,3 +197,4 @@
   </script>
 </body>
 </html>
+
