--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="https://github.com/ishaquecreates/Coming-soon/blob/main/favicon.png?raw=true" type="image/svg+xml">
+
   <title>Marqzen | Coming Soon</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
@@ -197,4 +199,5 @@
   </script>
 </body>
 </html>
+
 
